# ClusterIzer

./: .env.example  .gitignore  ANALYSIS_AND_PLAN.md  ARCHITECTURE.md  ARCHITECTURE_AND_STATUS.md  ARCHITECTURE_INVENTORY.md  COMPRESSION_SUMMARY.md  DETAILED_CODE_CHANGES.md  Dockerfile  ENGINEERING_PASS_SUMMARY.md  FINAL_ARCHITECTURE.mmd  FINAL_RUNTIME_ARCHITECTURE.mmd  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  MODULE_RESPONSIBILITY_MAP.md  Makefile  OPERATIONS_AND_USAGE.md  PHASE1_IMPLEMENTATION.md  REACHABILITY_ANALYSIS.txt  README.md  REMEDIATION_SAFETY_HARDENING_IMPLEMENTATION.md  RUNTIME_ARCHITECTURE.mmd  RUNTIME_AUDIT_FINAL_REPORT.md  RUNTIME_REDUCTION_AUDIT.md  SRE_IMPLEMENTATION_SUMMARY.md  STRESS_TEST_RESULTS.md  STRUCTURAL_COMPRESSION_REPORT.md  TEST_SUMMARY.md  compress_code.py  debug_risks.py  debug_slack_extraction.py  pyproject.toml  requirements.txt  run_all_tests.sh  test_kubesentinel.py  test_phase_n_runtime.py  test_risk_formula.py  test_runtime_validation.py
app/: __init__.py  config.py  main.py  models.py  rules.py
demos/: demo_script.md
docs/: COMPREHENSIVE_FIX_SUMMARY.md  CRD_INDEXER_IMPLEMENTATION.md  FINAL_REPORT.md  KUBECTL_EXECUTION_GUIDE.md  KUBECTL_VERIFICATION_SUMMARY.md  PRD.md  SLACK_BOT_FIXES.md  SLACK_BOT_IMPLEMENTATION.md  analysisFinal.md  slackIntergration.md
k8s/: clustergpt-deployment.yaml
kubesentinel/: __init__.py  agents.py  cluster.py  cost.py  crd_discovery.py  git_loader.py  graph_builder.py  main.py  models.py  persistence.py  reporting.py  risk.py  runtime.py  runtime_tracer.py  signals.py  simulation.py  synthesizer.py  tools.py
runtime_traces/: runtime_graph_20260309_120841.mmd  runtime_graph_20260309_124731.mmd  (+2 more)
(+54 files in other folders)
