[project]
name = "kubesentinel"
version = "0.1.0"
description = "Hierarchical graph-based multi-agent Kubernetes intelligence engine using LangGraph + LangChain + Ollama"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kubernetes>=35.0.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-ollama>=0.3.3",
    "langgraph>=1.0.10",
    "pydantic>=2.12.5",
    "PyYAML>=6.0.2",
    "python-dotenv>=1.0.0",
    "rich>=14.3.3",
    "slack-bolt>=1.20.0",
    "slack-sdk>=3.30.0",
    "typer>=0.24.1",
]

[project.scripts]
kubesentinel = "kubesentinel.main:app"
kubesentinel-slack = "kubesentinel.integrations.slack_bot:main"

[tool.setuptools]
packages = { find = { where = ["."], exclude = ["tests*"] } }

[tool.uv]
package = true

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.4",
    "types-pyyaml>=6.0.12.20250915",
]
[[tool.mypy.overrides]]
module = "kubernetes.*"
ignore_missing_imports = true
